Bug 550356 - [13] Compiler should recognize text blocks even if preview is disabled
Change-Id: Idde27863c253a625ab9c9400bafa3b400febaef5
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>